[gd_scene load_steps=3 format=3 uid="uid://dmtte1hbkdck2"]

[ext_resource type="Script" uid="uid://usshlib4s5ov" path="res://Scenes/Evidence/evidence.gd" id="1_4y244"]
[ext_resource type="Texture2D" uid="uid://ct3240ao7puhj" path="res://Assets/Evidence/missingwomen.webp" id="1_crggu"]

[node name="Evidence" type="Node2D"]
script = ExtResource("1_4y244")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50

[node name="EvidenceGrid" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 35
theme_override_constants/v_separation = 50
columns = 7

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EvidenceDetailWindow" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchor_left = 0.25
anchor_top = 0.04
anchor_right = 0.25
anchor_bottom = 0.04
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/EvidenceDetailWindow"]
layout_mode = 0
offset_right = 600.0
offset_bottom = 600.0

[node name="Image" type="TextureRect" parent="CanvasLayer/EvidenceDetailWindow/Panel"]
custom_minimum_size = Vector2(472, 267)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.1
anchor_bottom = 0.05
offset_right = 472.0
offset_bottom = 267.0
texture = ExtResource("1_crggu")
expand_mode = 1

[node name="Description" type="RichTextLabel" parent="CanvasLayer/EvidenceDetailWindow/Panel"]
layout_mode = 0
offset_left = 17.0
offset_top = 306.0
offset_right = 584.0
offset_bottom = 583.0
text = "placeholder text"

[node name="CloseButton" type="Button" parent="CanvasLayer/EvidenceDetailWindow/Panel"]
layout_mode = 0
offset_left = 545.0
offset_top = 9.0
offset_right = 591.0
offset_bottom = 60.0
text = "X"

[connection signal="pressed" from="CanvasLayer/EvidenceDetailWindow/Panel/CloseButton" to="." method="_on_close_button_pressed"]
